--- a/index.html
+++ b/index.html
@@ -5,7 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arjun Protfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik+Moonrocks&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <section>
+      <div class="half-width">
+        <h1>Wellcome To</h1>
+        <h1><span class="name-color">Arjun Das</span>World</h1>
+        <h3>This is me arjun and my information given on down...</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum impedit
+          perferendis, illum aliquam nostrum ducimus reprehenderit dolore eaque
+          error asperiores iure dolores obcaecati, delectus beatae quisquam
+          debitis. Porro, expedita dolore? Lorem ipsum, dolor sit amet
+          consectetur adipisicing elit. Ipsam voluptates, facere quasi nihil ut
+          neque aut non illum consequuntur eligendi nobis minima tenetur
+          officiis deserunt sequi voluptate molestiae expedita distinctio!
+        </p>
+        <a class="button" target="_blank" href="https://www.linkedin.com/feed/"
+          >HIRE ME</a
+        >
+      </div>
+      <div class="half-width">
+        <img src="images/1.png" alt="" />
+      </div>
+    </section>
+  </body>
 </html>
