--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section>
+    <section class="background">
       <div class="half-width">
         <h1>Wellcome To</h1>
         <h1><span class="name-color">Arjun Das</span>World</h1>
