dream section done

--- a/index.html
+++ b/index.html
@@ -36,5 +36,22 @@
         <img src="images/1.png" alt="" />
       </div>
     </section>
+    <section class="background2">
+      <div class="half-width">
+        <img src="/images/2.png" alt="" />
+      </div>
+      <div class="half-width">
+        <h1>Dream Big</h1>
+        <h3>Become a web developer</h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+          inventore voluptas, quis maxime itaque at soluta non, nostrum ut fuga,
+          ipsum quae doloribus. Enim hic quidem labore in accusamus totam.
+        </p>
+        <a class="button" target="_blank" href="https://www.facebook.com/"
+          >DOWNLOAD RESUME</a
+        >
+      </div>
+    </section>
   </body>
 </html>
