experience and footer section work done

--- a/index.html
+++ b/index.html
@@ -53,5 +53,33 @@
         >
       </div>
     </section>
+    <h1>Experience</h1>
+    <section class="experience-banner">
+      <div class="border-apply" id="left-border">
+        <h2>full stack web Developer</h2>
+        <h4 class="name-color">2021-preasent pro level developer</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, quo
+          laborum? Possimus tempore cupiditate sequi recusandae aspernatur animi
+          facere rem. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Ratione repellendus nostrum a soluta quam consectetur adipisci
+          recusandae amet quod velit!
+        </p>
+      </div>
+      <div class="border-apply" id="border">
+        <h2>full stack web Developer</h2>
+        <h4 class="name-color">2021-preasent pro level developer</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, quo
+          laborum? Possimus tempore cupiditate sequi recusandae aspernatur animi
+          facere rem. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Ratione repellendus nostrum a soluta quam consectetur adipisci
+          recusandae amet quod velit!
+        </p>
+      </div>
+    </section>
+    <footer>
+      <p class="footer">©Arjun Das 2023,a programming hero initiative.</p>
+    </footer>
   </body>
 </html>
