fix the image problem

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
     <section class="background2">
       <div class="half-width">
-        <img src="/images/2.png" alt="" />
+        <img src="images/2.png" alt="" />
       </div>
       <div class="half-width">
         <h1>Dream Big</h1>
