img problem on live site

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         >
       </div>
       <div class="half-width">
-        <img src="images/1.png" alt="" />
+        <img src="images/1.png" alt="arjun das image " />
       </div>
     </section>
     <section class="background2">
       <div class="half-width">
-        <img src="images/2.png" alt="" />
+        <img src="images/2.png" alt="arjun das image " />
       </div>
       <div class="half-width">
         <h1>Dream Big</h1>
